syntax = "proto3";

package Superplane.Configuration;

option go_package = "github.com/superplanehq/superplane/pkg/protos/configuration";

message Field {
  string name = 1;
  string type = 2;
  string description = 3;
  bool required = 4;
  optional string default_value = 5;
  string label = 6;
  repeated VisibilityCondition visibility_conditions = 7;
  optional TypeOptions type_options = 8;
  repeated RequiredCondition required_conditions = 9;
  repeated ValidationRule validation_rules = 10;
  optional string placeholder = 11;
  optional bool sensitive = 12;
  optional bool togglable = 13;
  optional bool disallow_expression = 14;
}

message TypeOptions {
  optional NumberTypeOptions number = 1;
  optional SelectTypeOptions select = 2;
  optional MultiSelectTypeOptions multi_select = 3;
  optional ListTypeOptions list = 4;
  optional ObjectTypeOptions object = 5;
  optional ResourceTypeOptions resource = 6;
  optional TimeTypeOptions time = 7;
  optional DateTypeOptions date = 8;
  optional DateTimeTypeOptions datetime = 9;
  optional AnyPredicateListTypeOptions any_predicate_list = 10;
  optional StringTypeOptions string = 11;
  optional ExpressionTypeOptions expression = 12;
  optional TextTypeOptions text = 13;
}

message NumberTypeOptions {
  optional int32 min = 1;
  optional int32 max = 2;
}

message StringTypeOptions {
  optional int32 min_length = 1;
  optional int32 max_length = 2;
}

message ExpressionTypeOptions {
  optional int32 min_length = 1;
  optional int32 max_length = 2;
}

message TextTypeOptions {
  optional int32 min_length = 1;
  optional int32 max_length = 2;
}

message TimeTypeOptions {
  optional string format = 1;
}

message DateTypeOptions {
  optional string format = 1;
}

message DateTimeTypeOptions {
  optional string format = 1;
}

message SelectTypeOptions {
  repeated SelectOption options = 1;
}

message MultiSelectTypeOptions {
  repeated SelectOption options = 1;
}

message ResourceTypeOptions {
  string type = 1;
  bool use_name_as_value = 2;
  bool multi = 3;
  repeated ParameterRef parameters = 4;
}

message ParameterRef {
  string name = 1;
  string value = 2;
  ParameterValueFrom value_from = 3;
}

message ParameterValueFrom {
  string field = 1;
}

message ListTypeOptions {
  ListItemDefinition item_definition = 1;
  string item_label = 2;
  optional int32 max_items = 3;
}

message ObjectTypeOptions {
  repeated Field schema = 1;
}

message SelectOption {
  string label = 1;
  string value = 2;
}

message VisibilityCondition {
  string field = 1;
  repeated string values = 2;
}

message ListItemDefinition {
  string type = 1;
  repeated Field schema = 2;
}

message RequiredCondition {
  string field = 1;
  repeated string values = 2;
}

message ValidationRule {
  string type = 1;
  string compare_with = 2;
  optional string message = 3;
}

message AnyPredicateListTypeOptions {
  repeated SelectOption operators = 1;
}
